@@ -1,6 +1,8 @@
 1.03	2011-0?-??
 	- recommenders
 	- command-line tools
+          - write out predictions every N iterations with --prediction-file=F
+            and --find-iter=N (bug reported by Alejandro Bellogin)
 	- evaluation
         - data structures
           - add interfaces IBooleanMatrix and IPosOnlyFeedback
@@ -11,6 +13,7 @@
           - Matrix<T>: perform bounds check only when DEBUG is set;
             faster GetRow()/SetRow(); generic return types
 	- documentation
+          - some API doc improvements
 
 1.02	2011-05-24
 	- recommenders
